tests/fixtures/invalid/float_notin_str.py
# Cannot use 'not in' with Float and Str
x: bool = 1.0 not in "hello"
